--- a/reggie_take_out/pom.xml
+++ b/reggie_take_out/pom.xml
@@ -77,6 +77,19 @@
 			<version>0.16</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- 阿里云短信服务 -->
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-core</artifactId>
+			<version>4.6.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+			<version>2.2.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
